--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,7 +1,9 @@
 <% @tournaments.each do |tournament| %>
   <div class='photos'>
 
-
+<% if current_user[:admin]%>
+<%= link_to "ADMIN FUNCTIONS", admins_path %>
+<% end %>
 
 
     <a href="/players"> <img class='tournament-photo' src="<%= tournament[:photo] %>" ></a>
