--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_field :password %>
   </p>
 
+      <p>
+    <%= f.label :admin %><br>
+    <%= f.text_field :admin %>
+  </p>
+
   <p>
     <%= f.submit %>
   </p>
