--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
    </div>
     <h2 id="sign", style="color: white">SIGN UP or SIGN IN</h2>
 
-<h2><%= link_to 'TOURNAMENTS', '/tournaments' %></h2>
+<!-- <h2><%= link_to 'TOURNAMENTS', '/tournaments' %></h2> -->
 
 </body>
 
