--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,5 +1,14 @@
+<title>Players</title>
+
+
 <p><%=link_to "Back", '/tournaments' %></p>
 
+
+<h2>MEN'S DRAW</h2>
+<a href="http://www.ausopen.com/en_AU/scores/draws/ms/msdraw.pdf">Men's Singles Draw</a>
+
+<h2>WOMEN'S DRAW</h2>
+<a href="http://www.ausopen.com/en_AU/scores/draws/ws/wsdraw.pdf">Women's Singles Draw</a>
 
 <h2>PLAYERS</h2>
 
