--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>This is the show users page from the show.html.erb file.</h1>
+<p><%=link_to "Back", '/admins' %></p>
 
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
 <p><%= @user.user_name %></p>
