--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,43 +1,10 @@
 <p><%=link_to "Back", '/tournaments' %></p>
 
 
-<h2><%= link_to "ADD A NEW PLAYER", players_new_path %></h2><br>
-
-<h4>PLAYERS</h4>
-
-<% men = [] %>
-<% women = [] %>
-
-<% @players_sorted.each do |player| %>
-
-<% if player[:gender] === "male" %>
-   <% men.push (player) %>
-   <% else women.push (player) %>
-<% end %>
-
-
-<% end %>
-
-
-    MEN
-  <% men.each do |man| %>
-    <div>
-    <%= man[:first_name] %> <%= link_to man[:last_name], player_path(man) %>,
-    <%= man[:country] %>
-    <%= link_to "edit", edit_path(man) %>
-    <%= link_to "Delete this Player!", man, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %>
-
-    </div>
-  <% end %><br>
-     WOMEN
-    <% women.each do |woman| %>
-    <div>
-    <%= woman[:first_name] %> <%= link_to woman[:last_name], player_path(woman) %>,
-    <%= woman[:country] %>
-    <%= link_to "edit", edit_path(woman) %>
-    <%= link_to "Delete this Player!", woman, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %>
-
-    </div>
-  <% end %>
-
+<h2><%= link_to "ADD A NEW PLAYER", players_new_path %></h2>
+<h2><%= link_to "ADD A NEW USER", users_new_path %></h2>
+<h2><%= link_to "ADD A NEW COUNTRY", countries_new_path %></h2>
+<h3><%= link_to "EDIT USERS", users_path %></h3>
+<h3><%= link_to "EDIT COUNTRIES", countries_path %></h3>
+<h3><%= link_to "EDIT PLAYERS", '/admins/players' %></h3><br>
 
