--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -4,15 +4,14 @@
   <a href="/players"> <img class='player-photo' src="<%= @player[:photo] %>" ></a>
 </div>
 
-<h1><b><%= @player.first_name %> <%= @player.last_name %></b></h1><br>
-<h3>Country:  <%= @player.country %></h3><br><br>
-
-<h3>Ranking:  <%= @player.ranking %></h3><br>
-<h3>Age:  <%= @player.age %></h3><br>
-<h3>Birthdate:  <%= @player.birthdate %></h3><br>
-<h2>Australian Open</h2><br>
-<h3>Seed Number:  <%= @player.seed %></h3><br>
-<h3>Draw Line Number:  <%= @player.draw_line_number%></h3><br>
+<h1><b><%= @player.first_name %> <%= @player.last_name %></b></h1>
+<p>Country:  <%= @player.country %></p>
+<p>Ranking:  <%= @player.ranking %></p>
+<p>Age:  <%= @player.age %></p>
+<p>Birthdate:  <%= @player.birthdate %></p>
+<h2><b>Australian Open</b></h2>
+<p>Seed Number:  <%= @player.seed %></p>
+<p>Draw Line Number:  <%= @player.draw_line_number%></p>
 
 
 
