--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<body id="admins-page">
 <p><%=link_to "Back", '/admins' %></p>
 
 <h3>Edit a user's information</h3>
@@ -37,6 +38,7 @@
     <%= f.submit %>
   </p>
 <% end %>
+</body>
 
 
 
