--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<body id="admins-page">
 <p><%=link_to "Back", '/admins' %></p>
 
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
@@ -9,6 +10,6 @@
 
 <%=link_to "Edit User's Info", edit_user_path%>
 <%= link_to "Delete this User!", @user, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %><br>
-
+</body>
 
 
