--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Tournaments") %>
 <body id="tournaments-page">
 <% if current_user[:admin]%>
 <%= link_to "ADMIN FUNCTIONS", admins_path %>
